--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <head>
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
-  <meta name="description" content="StudyPress | Education & Courses HTML Template" />
+  <meta name="description" content="Tecnologia e inovação caminhando ao seu lado" />
   <meta name="keywords" content="academy, course, education, education html theme, elearning, learning," />
-  <meta name="author" content="ThemeMascot" />
+  <meta name="author" content="TechWay" />
   <title>TechWay </title>
 
   <link href="images/logoTechWay.png" rel="shortcut icon" type="image/png">
