--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width,initial-scale=1.0" />
   <meta http-equiv="content-type" content="text/html; charset=UTF-8" />
   <meta name="description" content="Tecnologia e inovação caminhando ao seu lado" />
-  <meta name="keywords" content="academy, course, education, education html theme, elearning, learning," />
+  <meta name="keywords" content="TechWay" />
   <meta name="author" content="TechWay" />
   <title>TechWay </title>
 
