fix: Erro no console

--- a/index.html
+++ b/index.html
@@ -33,8 +33,6 @@
   <script src="js/jquery-plugin-collection.js"></script>
   <script src="js/revolution-slider/js/jquery.themepunch.tools.min.js"></script>
   <script src="js/revolution-slider/js/jquery.themepunch.revolution.min.js"></script>
-  <link rel="stylesheet" type="text/css" href="Botao/cssBotao/style.css">
-  <link rel="stylesheet" type="text/css" href="Botao/cssBotao/fonts-icones.css">
 
 </head>
 
@@ -488,9 +486,7 @@
     src="js/revolution-slider/js/extensions/revolution.extension.slideanims.min.js"></script>
   <script type="text/javascript" src="js/revolution-slider/js/extensions/revolution.extension.video.min.js"></script>
 
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js"
-    integrity="sha512-3j3VU6WC5rPQB4Ld1jnLV7Kd5xr+cq9avvhwqzbH/taCRNURoeEpoPBK9pDyeukwSxwRPJ8fDgvYXd6SkaZ2TA=="
-    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-cookie/1.4.1/jquery.cookie.min.js" referrerpolicy="no-referrer"></script>
   <script>
     $(document).ready(function () {
       init()
